--- a/VkNewsFeed/NewsFeed/NewsFeedViewController.storyboard
+++ b/VkNewsFeed/NewsFeed/NewsFeedViewController.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="7se-Kq-ZSM">
-                                <rect key="frame" x="-16" y="0.0" width="409" height="852"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <connections>
                                     <outlet property="dataSource" destination="Y6W-OH-hqX" id="QJL-1g-7H9"/>
@@ -32,7 +32,7 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="7se-Kq-ZSM" secondAttribute="trailing" id="6b3-sd-PO0"/>
                             <constraint firstItem="7se-Kq-ZSM" firstAttribute="top" secondItem="5EZ-qb-Rvc" secondAttribute="top" id="7dN-CJ-COw"/>
                             <constraint firstItem="7se-Kq-ZSM" firstAttribute="bottom" secondItem="vDu-zF-Fre" secondAttribute="bottom" constant="34" id="O5d-Cs-2VF"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="leading" secondItem="7se-Kq-ZSM" secondAttribute="leading" constant="16" id="nvg-wA-iJe"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="leading" secondItem="7se-Kq-ZSM" secondAttribute="leading" id="nvg-wA-iJe"/>
                         </constraints>
                     </view>
                     <connections>
