--- a/VkNewsFeed/NewsFeed/Cell/NewsFeedCell.xib
+++ b/VkNewsFeed/NewsFeed/Cell/NewsFeedCell.xib
@@ -18,7 +18,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QSU-LV-N9e">
-                        <rect key="frame" x="9" y="55" width="356" height="103"/>
+                        <rect key="frame" x="9" y="55" width="356" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
@@ -108,7 +108,7 @@
                         <rect key="frame" x="9" y="11" width="356" height="36"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c4B-zP-vP8">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c4B-zP-vP8" customClass="WebImageVIew" customModule="VkNewsFeed" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="36" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemRedColor"/>
@@ -132,6 +132,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kqk-fx-MbO" customClass="WebImageVIew" customModule="VkNewsFeed" customModuleProvider="target">
+                        <rect key="frame" x="9" y="112" width="350" height="48"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                    </imageView>
                 </subviews>
             </tableViewCellContentView>
             <connections>
@@ -140,6 +144,7 @@
                 <outlet property="iconImageView" destination="c4B-zP-vP8" id="ghd-Vm-0wn"/>
                 <outlet property="likesLabel" destination="fJU-Tn-SGU" id="XaL-LJ-wmc"/>
                 <outlet property="nameLabel" destination="8XN-72-XhO" id="9B0-E2-Xd3"/>
+                <outlet property="postImageView" destination="Kqk-fx-MbO" id="kz7-6O-6iY"/>
                 <outlet property="postLabel" destination="QSU-LV-N9e" id="KEW-io-yju"/>
                 <outlet property="sharesLabel" destination="QOP-mO-2n2" id="bv0-CP-s9k"/>
                 <outlet property="viewsLabel" destination="8Rw-Qs-cHG" id="FAS-o1-cAv"/>
